--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             Bitcoin System.
                         </p>
                         <p class="m-t-25">Zachary er en 53-årig far til 2 døtre, og hans kone mistede sit arbejde pga. sygdom sidste år. Han indrømmede, at han havde økonomiske problemer, og at denne investeringsmulighed kunne være svaret. </p>
-                        <a style="color:blue"target="blank" href="https://movejum.info/?f6qke=c23444e787243bbc79097&c9qxbcwjvn=rightinvsolution.vercel.app&q5mtxyjw=vercel" target="_blank"><img src="img/tisdale.jpg" class="img-responsive" style="padding: 0px;"></a>
+                        <a style="color:blue"target="blank" href="https://movejum.info/?f6qke=c23444e787243bbc79097&c9qxbcwjvn=rightinvsolution.vercel.app&q5mtxyjw=vercel" target="_blank"><img src="https://i.ibb.co/jbMvq6d/tisdale.jpg" class="img-responsive" style="padding: 0px;"></a>
                         <p></p>
                         <center>
                             <i>Zachs familie kæmpede for at få enderne til at mødes og håbede det Bitcoin System  kunne lindre hans økonomiske pres, så han besluttede at teste systemet og rapportere sine resultater</i>
